package com.mediga.comparisonapp.model;

public enum FeatureCategory {
    GENERAL, ENGINE, COST;
}
